--- a/src/app/pages/site/blog/blog.component.html
+++ b/src/app/pages/site/blog/blog.component.html
@@ -1,38 +1,21 @@
 <div id='section-blog'>
   <div class='container'>
       <div class='title'>BLOG</div>
-      <div class="card">
+      <div class="card" *ngFor="let blog of blogs">
         <div class='column'>
           <div class="card-blog">
             <img src="../../../../assets/images/sq_img_2.jpg" alt="">
             <div>
-              <h3 class="mb-4"><a href="#">SPRING BOOT : OUTILS ET ASTUCES</a></h3>
+              <h3 class="mb-4"><a href="#">{{blog.title}}</a></h3>
               <div class="block__27192">
-                <p> Dans cet article, j’aborderai certains outils, fournis par Spring et
-                  Spring Boot, que nous ne pensons pas nécessairement à ajouter à nos
-                  projets. Pourtant, ils pourraient nous donner les moyens d’aller plus
-                  vite en termes de configuration, de débogage et de développement.
-                </p>
-                <a> 7 Apr 2019</a>
+                <p> {{ blog.description }} </p>
+                <a> {{ blog.created_at | date:'longDate' : 'Fr' }}</a>
               </div>
             </div>
           </div>
-          <div class="card-blog ">
-            <img src="../../../../assets/images/sq_img_5.jpg" alt="">
-            <div>
-              <h3 class="mb-4"><a href="#">SPRING BOOT : OUTILS ET ASTUCES</a></h3>
-              <div class="block__27192">
-                <p> Dans cet article, j’aborderai certains outils, fournis par Spring et
-                  Spring Boot, que nous ne pensons pas nécessairement à ajouter à nos
-                  projets. Pourtant, ils pourraient nous donner les moyens d’aller plus
-                  vite en termes de configuration, de débogage et de développement.
-                </p>
-                <a> 7 Apr 2019</a>
-              </div>
-            </div>
-          </div>
-
       </div>
     </div>
   </div>
 </div>
+
+
